[package]
name = "texnet"
description = "Multiplier networking solution"
authors = ["Dev Coffee"]
repository = "https://github.com/itsdevcoffee/tex-net"
license = "MIT"

version = "0.1.0"
edition = "2021"

[dependencies]
quinn = "0.10.2"
bytes = "1.5.0"
quinn-proto = "0.10.2"
http = "1.0.0"
thiserror = "1.0"
futures = "0.3"
async-std = "1.12.0"
url = "2.5.0"
log = "0.4.20"
env_logger = "0.10.1"
dotenv = "0.15.0"
rustls = { version = "0.21", features = ["dangerous_configuration", "quic"] }
rcgen = "0.11.3"
clap = { version = "4", features = ["derive"] }
rustls-pemfile = "1.0.2"
tokio = { version = "1.35.0", features = ["full"] }
anyhow = "1.0.75"

[dev-dependencies]
